# lubycon-event-gateway

./: .gitignore  README.md  bigquery.py  data.json  package-lock.json  package.json  pyproject.toml  serverless.yaml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: collect.py
app/core/: config.py
app/schemas/: __init__.py
app/utils/: aws.py  request_parse.py
app/worker/: consumer.py
secrets/: README.md
